# data-ingest-task-force

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build_and_upload_docker_image.yml  test.yml
code/: README.md  convert_raw_to_bids.py
containers/: Dockerfile
labs/kemere/: README.md
labs/kemere/code/: README.md  convert_raw_to_bids.py
labs/kemere/containers/: kemere.Dockerfile
labs/kemere/envs/: pyproject.toml
labs/kemere/tests/: ffprobe_shim.py  generate_fixtures.py  test_conversion.py
labs/kemere/tests/example_raw/07102026-Session1/overhead/beh/: notes.txt  overhead_video.pv  overhead_video.results  overhead_video.settings
labs/kemere/tests/expected_output/: README  participants.tsv
labs/kemere/tests/expected_output/sub-multi/ses-20260710/: sub-multi_ses-20260710_scans.json  sub-multi_ses-20260710_scans.tsv
tests/: test_conversion.py  test_convert_raw_to_bids.py
tests/example_raw/07102026-Session1/overhead/beh/: overhead_dji_metadata.srt
tests/expected_output/: dataset_description.json  participants.json
tests/expected_output/sub-multi/ses-20260710/beh/: sub-multi_ses-20260710_acq-average_recording-overhead_image.json  sub-multi_ses-20260710_recording-overhead_video.json
